--- a/ui/index.html
+++ b/ui/index.html
@@ -7,11 +7,46 @@
 <body>
     <header class="main-header" style="background-image: url(content/images/background.jpg)">
         <div class="vertical tint">
-            <div class="inner">
-                <a class="button new-game-button">New Game</a>
-                <a class="button join-game-button">Join Game</a>
+            <div class="page inner">
             </div>
         </div>
     </header>
+
+    <script type="text/template" id="welcome-choice-template">
+        <a class="button new-game-button">New Game</a>
+        <a class="button join-game-button">Join Game</a>
+    </script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.2/backbone-min.js"></script>
+    <script>
+        $.ajaxPrefilter( function(options, originalOptions, jqXHR) {
+            options.url = 'localhost:8080'
+        });
+
+        var WelcomeChoice = Backbone.View.extend({
+            el: '.page',
+            render : function() {
+                var template = _.template($('#welcome-choice-template').html());
+                this.$el.html(template);
+            }
+        });
+
+        var Router = Backbone.Router.extend({
+            routes : {
+                '' : 'home'
+            }
+        });
+
+        var welcomeChoice = new WelcomeChoice();
+
+        var router = new Router();
+        router.on('route:home', function () {
+            welcomeChoice.render();
+        });
+
+        Backbone.history.start();
+    </script>
 </body>
 </html>
