--- a/ui/index.html
+++ b/ui/index.html
@@ -4,48 +4,42 @@
     <title>Wolvs</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <base href="/">
     <!--[if lte IE 8]><script src="content/css/red/assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="content/css/red/assets/css/main.css" />
+
+    <!-- 1. Load libraries -->
+    <!-- IE required polyfills, in this exact order -->
+    <script src="node_modules/es6-shim/es6-shim.min.js"></script>
+    <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
+    <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
+
+    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/rxjs/bundles/Rx.js"></script>
+    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="node_modules/angular2/bundles/router.dev.js"></script>
+
+    <!-- 2. Configure SystemJS -->
+    <script>
+        System.config({
+            packages: {
+                app: {
+                    format: 'register',
+                    defaultExtension: 'js'
+                }
+            }
+        });
+        System.import('app/main')
+                .then(null, console.error.bind(console));
+    </script>
 </head>
 <body>
     <div id="wrapper" class="container">
         <section class="main major style2" style="text-align: center">
-            <div class="page"/>
+            <wolvs-app>Loading...</wolvs-app>
         </section>
     </div>
-
-    <script type="text/template" id="welcome-choice-template">
-        <h2>Welcome to Wolvs</h2>
-        <ul class="actions">
-            <div class="row uniform 50%">
-                <div class="12u$">
-                    <a class="button big special fit" href="#/new">New Game</a>
-                </div>
-                <div class="12u$">
-                    <a class="button big special fit" href="#/join">Join Game</a>
-                </div>
-            </div>
-        </ul>
-    </script>
-
-    <script type="text/template" id="setup-game-template">
-        <h2>Create a new game</h2>
-        <div class="row uniform 50%">
-            <div class="6u$ 12u$(xsmall)" style="text-align: left">
-                <input type="checkbox" id="customize-roles" name="customize-roles">
-                <label for="customize-roles">Customize Roles</label>
-            </div>
-            <div class="6u 12u$(xsmall)">
-                <a class="button big special fit" href="#/create-and-join">Create & Join</a>
-            </div>
-            <div class="6u 12u$(xsmall)">
-                <a class="button big special fit" href="#/create-and-spectate">Create & Spectate</a>
-            </div>
-            <div class="12u$">
-                <a class="button" href="#/">Back</a>
-            </div>
-        </div>
-    </script>
 
     <script type="text/template" id="join-game-template">
         <h2>Join an existing game</h2>
@@ -61,67 +55,6 @@
                 <a class="button" href="#/">Back</a>
             </div>
         </div>
-    </script>
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.2/backbone-min.js"></script>
-    <script>
-        $.ajaxPrefilter( function(options, originalOptions, jqXHR) {
-            options.url = 'localhost:8080'
-        });
-
-        var WelcomeChoice = Backbone.View.extend({
-            el: '.page',
-            render : function() {
-                var template = _.template($('#welcome-choice-template').html());
-                this.$el.html(template);
-            }
-        });
-
-        var SetupGame = Backbone.View.extend({
-            el: '.page',
-            render : function() {
-                var template = _.template($('#setup-game-template').html());
-                this.$el.html(template);
-            }
-        });
-
-        var JoinGame = Backbone.View.extend({
-            el: '.page',
-            render : function() {
-                var template = _.template($('#join-game-template').html());
-                this.$el.html(template);
-            }
-        });
-
-        var Router = Backbone.Router.extend({
-            routes : {
-                '' : 'home',
-                'new' : 'setupGame',
-                'join' : 'joinGame'
-            }
-        });
-
-        var welcomeChoice = new WelcomeChoice();
-        var setupGame = new SetupGame();
-        var joinGame = new JoinGame();
-
-        var router = new Router();
-
-        router.on('route:home', function () {
-            welcomeChoice.render();
-        });
-
-        router.on('route:setupGame', function () {
-            setupGame.render();
-        });
-
-        router.on('route:joinGame', function () {
-            joinGame.render();
-        });
-
-        Backbone.history.start();
     </script>
 </body>
 </html>
